# PFE

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_TIMEOUT_FIX_GUIDE.md  BACKEND_STANDARDS.md  BRAND_GUIDELINES.md  CHANGELOG.md  CODE_STANDARDS.md  CONNECTIVITY_FIX_APPLIED.md  CONTRIBUTING.md  DESIGN_TOKENS.md  FINAL_SUMMARY.md  FRONTEND_STANDARDS.md  GOOGLE_SIGNIN_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_QUALITY.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_OVERVIEW.md  IMPLEMENTATION_README.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_INDEX.md  MIGRATION_GUIDE.md  PHARMACY_UPLOAD_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  SECURITY_FIX_REPORT.md  SECURITY_IMPLEMENTATION.md  TECHNICAL_ARCHITECTURE.md  TESTING_GUIDE_PHARMACY_UPLOAD.md  TRANSLATION_SYSTEM_ANALYSIS.md  debug_admin.py  package-lock.json  qa_phase4.mjs  screenshot.mjs  skills-lock.json  todo
backend_pharmacie/: .coverage  .env  .env.example  ARCHITECTURE.md  check_admin_simple.py  create_test_user.py  database.py  debug_admin_migration.py  dependencies.py  fix_and_create_user.py  main.py  migrate.py  models.py  package-lock.json  permissions.py  pharmacie_dev.db  pyproject.toml  region_scope.py  requirements.txt  reset_admin_password.py  reset_admin_pg.py  sample_pharmacies.csv  schema_migrations.py  schemas.py  security.py  seed_admin.py  setup_schema.py  start_lan.ps1  test_auth_security.py  test_hash.py  test_pharmacies.csv  test_schema.py
backend_pharmacie/data/: missing_phones.csv
(+419 files in other folders)
